Compile WAT directly; switch to Makefile

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "wasm-playground",
   "type": "module",
   "scripts": {
-    "build": "bash -c 'cd src && ./compile.sh'",
-    "clean": "bash -c 'rm -f public/*.wasm'"
+    "build": "make all",
+    "clean": "make clean"
   }
 }
